# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imgen"
version = "1.0.0"
description = "Tools for 2D image synthesis."
readme = "README.md"
authors = [{ name = "R. Michael Womick", email = "michael@womick.me" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["synthesis", "tools", "image"]
dependencies = [
    "torch",
    "torchvision",
]
requires-python = ">=3.9"